--- a/RebirthGuard/RebirthGuard/RebirthGuard.vcxproj.filters
+++ b/RebirthGuard/RebirthGuard/RebirthGuard.vcxproj.filters
@@ -37,13 +37,19 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="RebirthGuard.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="options.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RebirthGuardSDK.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RebirthGuard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RGString.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ntstruct.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
